# arula-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCED_AI_SECTION.md  MANIFEST_IMPROVEMENTS_SUMMARY.md  OPENCV_INSTALLATION_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT.manifest  PROJECT_MANIFEST_IMPROVEMENTS.md  PROJECT_MANIFEST_SPEC.md  README.md  REFACTORING_PLAN.md  Visioneer_MILESTONE_ACHIEVED.md  YAML_TO_JSON_MIGRATION.md  input_display_fix.md  main_function_backup.rs  security_analysis.md  task.md  test_changelog.sh  test_config.rs  test_manifest_integration.sh  test_mcp.sh  test_output_fix.rs  test_project_init.sh  tool_test.txt
.claude-flow/metrics/: performance.json  task-metrics.json
arula_android/: BUILD_DEBUG_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  README.md  TERMUX_BUILD_STATUS.md  build.gradle  gradle.properties  local.properties  settings.gradle
arula_android/.cargo/: config.toml
arula_android/app/: build.gradle
arula_android/app/src/main/: AndroidManifest.xml
arula_android/app/src/main/cpp/: arula_jni.cpp
arula_android/app/src/main/java/com/arula/terminal/: ArulaNative.java  ArulaService.java  MainActivity.java  MainViewModel.java  Message.java  MessageAdapter.java  SettingsActivity.java  SettingsManager.java
arula_android/app/src/main/java/com/arula/terminal/api/: AiApiClient.java
arula_android/app/src/main/java/com/arula/terminal/ui/animation/: SpringAnimation.java
arula_android/app/src/main/java/com/arula/terminal/ui/canvas/: LiquidMenuBackground.java  LivingBackground.java  (+1 more)
arula_android/app/src/main/res/drawable/: ic_arrow_right.xml  ic_terminal.xml
arula_android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_message.xml  settings_activity.xml  sliding_menu_content.xml
arula_android/app/src/main/res/menu/: menu_main.xml
arula_android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
arula_android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  root_preferences.xml
arula_android/arula_core/: Cargo.toml
arula_android/arula_core/src/: lib.rs
arula_android/arula_core/src/platform/android/: command.rs  config.rs  filesystem.rs  mod.rs  notification.rs  terminal.rs  termux_api.rs
arula_cli/: Cargo.toml
arula_cli/benches/: chat_benchmarks.rs.disabled  config_benchmarks.rs  tools_benchmarks.rs
arula_cli/examples/: animation_demo.rs  debug_tools.rs  question_tool_demo.rs  spinner_demo.rs  test_mcp_integration.rs  visioneer_examples.json
arula_cli/src/: lib.rs  main.rs
arula_cli/src/ui/: colors.rs  custom_spinner.rs  effects.rs  input_handler.rs  mod.rs  response_display.rs  scroll_history.rs  thinking_widget.rs  tui.rs  tui_app.rs
arula_cli/src/ui/menus/: api_key_selector.rs  common.rs  config_menu.rs  conversation_menu.rs  dialogs.rs  exit_menu.rs  main_menu.rs  mod.rs  model_selector.rs  provider_menu.rs
arula_cli/src/ui/output/: code_blocks.rs  handler.rs  markdown.rs  mod.rs  spinners.rs  tool_display.rs
arula_cli/src/ui/widgets/: mod.rs  status.rs  thinking.rs
arula_cli/tests/: chat_integration_tests.rs  config_integration_tests.rs  mod.rs  test_helpers.rs.disabled  tool_call_integration_tests.rs  visioneer_tests.rs
arula_core/: Cargo.toml
arula_core/src/: app.rs  async_optimizations.rs  conversation_manager.rs  lib.rs  prelude.rs  profiling.rs  rust_2024_examples.rs  session_manager.rs
arula_core/src/api/: agent.rs  agent_client.rs  api.rs  http_client.rs  mod.rs  models.rs  stream.rs  streaming.rs  xml_toolcall.rs
arula_core/src/init/: example.rs  fragments.rs  mod.rs  pipeline.rs  report_generator.rs
arula_core/src/tools/: analyze_context.rs  mcp.rs  mcp_dynamic.rs  mod.rs  tools.rs  visioneer.rs
arula_core/src/tools/builtin/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  list_dir.rs  mod.rs  question.rs  search.rs  web_search.rs
arula_core/src/utils/: changelog.rs  chat.rs  colors.rs  config.rs  conversation.rs  debug.rs  error.rs  error_utils.rs  git_state.rs  logger.rs  mod.rs  time.rs  tool_call.rs  tool_progress.rs
arula_desktop/: AGENTS.md  Cargo.toml  streaming_fix.patch  test_theme_colors.rs
arula_desktop/src/: config.rs  constants.rs  dispatcher.rs  lib.rs  main.rs  project_context.rs  session.rs
arula_desktop/src/animation/: mod.rs  spring.rs  states.rs
arula_desktop/src/canvas/: liquid_menu.rs  living_background.rs  loading_spinner.rs  mod.rs  tilt_card.rs
arula_desktop/src/styles/: button.rs  container.rs  input.rs  mod.rs
arula_desktop/src/theme/: app_theme.rs  mod.rs  palette.rs
benches/: chat_benchmarks.rs  config_benchmarks.rs  tools_benchmarks.rs
docs/: animations.md  enhanced-styling-guide.md  modern-input-implementation.md  real-time-changelog.md  visioneer.md
examples/: debug_tools.rs  inquire_demo.rs  question_tool_demo.rs  test_mcp_integration.rs  test_streaming.rs
src/: agent.rs  agent_client.rs  api.rs  app.rs  app_testable.rs  art.rs  changelog.rs  chat.rs  cli_commands.rs  colors.rs  config.rs  conversation.rs  custom_spinner.rs  git_ops.rs  input_area.rs  input_handler.rs  inquire_input.rs  layout.rs  lib.rs  main.rs  main_rs_backup.rs  modern_input.rs  output.rs  overlay_menu.rs  progress.rs  test_utils.rs  tool_call.rs  tools.rs  ui_components.rs  visioneer.rs
src/api/: agent.rs  agent_client.rs  api.rs  mod.rs  models.rs
src/testing/: mocks.rs  mod.rs
src/tools/: mcp.rs  mcp_dynamic.rs  mod.rs  tools.rs  visioneer.rs
src/ui/: custom_spinner.rs  effects.rs  input_handler.rs  mod.rs  output.rs  reedline_input.rs  response_display.rs
src/ui/menus/: api_key_selector.rs  common.rs  config_menu.rs  conversation_menu.rs  dialogs.rs  exit_menu.rs  main_menu.rs  mod.rs  model_selector.rs  provider_menu.rs
src/ui/output/: code_blocks.rs
src/utils/: chat.rs  colors.rs  config.rs  conversation.rs  mod.rs  tool_progress.rs
src/widgets/: mod.rs  tool_call_widget.rs
tests/: chat_integration_tests.rs  config_integration_tests.rs  mod.rs  test_utils.rs  tool_call_integration_tests.rs  visioneer_tests.rs
(+1 files in other folders)
