[package]
name = "arula-cli"
version = "0.1.0"
edition = "2021"
authors = ["ARULA CLI Team"]
description = "Autonomous AI CLI with native terminal chat interface"

[dependencies]
rustyline = "14.0"
console = "0.15"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
color-eyre = "0.6"
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
futures = "0.3"
tokio-util = "0.7"
# Modern tool calling - implementing patterns from open-agent-sdk manually
async-trait = "0.1"
tokio-stream = "0.1"
dirs = "5.0"
duct = "0.13"
memmap2 = "0.9"
ignore = "0.4"
globset = "0.4"
walkdir = "2.4"
num_cpus = "1.16"
indicatif = "0.17"
fastrand = "2.0"
syntect = "5.0"
termimad = "0.20"
serde_yaml = "0.9"
base64 = "0.22"
rusty-tesseract = "1.1"
# Visioneer dependencies - Real implementations (Windows only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Console", "Win32_System_ProcessStatus", "Win32_UI_Accessibility", "Win32_UI_TextServices"] }
uiautomation = "0.13"
screenshots = "0.7"

# Cross-platform dependencies
image = "0.25"
# OpenCV optional - comment out for easier build
# opencv = { version = "0.88", features = ["imgproc", "imgcodecs", "objdetect", "highgui"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
wiremock = "0.6"
assert_matches = "1.5"
pretty_assertions = "1.4"
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "config_benchmarks"
harness = false

[[bench]]
name = "chat_benchmarks"
harness = false

[[bench]]
name = "tools_benchmarks"
harness = false
