[workspace]
members = [
    "arula_core",
    "arula_cli",
    "arula_desktop",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
