[workspace]
members = [
    "arula_core",
    "arula_cli",
    "arula_desktop",
]
exclude = [
    "arula_android/arula_jni",  # Android cross-compilation target
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
