[package]
name = "arula_core"
version.workspace = true
edition.workspace = true
authors = ["CriticalRange"]
description = "Autonomous AI CLI core package"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
chrono.workspace = true
console = "0.16"
dirs = "6.0"
duct = "1.1"
fastrand = "2.0"
futures.workspace = true
globset = "0.4"
ignore = "0.4"
image = "0.25"
lazy_static = "1.4"
memmap2 = "0.9"
num_cpus = "1.16"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
uuid.workspace = true
urlencoding = "2.1"
diff = "0.1"
regex = "1.10"
toml = "0.8"
walkdir = "2.5"
indicatif = "0.18"
rusty-tesseract = "1.1"
eventsource-stream = "0.2.3"
tracing = "0.1.43"
quick-xml = "0.31"

[target.'cfg(target_os = "windows")'.dependencies]
screenshots = "0.8"
