[package]
name = "arula_desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arula_core = { path = "../arula_core" }
chrono.workspace = true
futures.workspace = true
iced = { version = "0.13.0", features = ["advanced", "wgpu", "tokio"] }
iced_aw = "0.12.2"
screenshots = "0.8.10"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid.workspace = true
