[package]
name = "arula_desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arula_core = { path = "../arula_core" }
chrono.workspace = true
futures.workspace = true
iced = { version = "0.14.0", features = ["advanced", "wgpu", "tokio", "canvas", "markdown", "highlighter"] }
iced_aw = "0.13.0"
iced_fonts = { version = "0.3.0", features = ["bootstrap"] }
screenshots = "0.8.10"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
uuid.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"
open = "5"
dirs = "5"
arboard = "3"
rfd = "0.15"
